pop-up z-index fix

--- a/_working_files/page_templates/css/main.css
+++ b/_working_files/page_templates/css/main.css
@@ -832,6 +832,7 @@ GENERAL STYLING
   transition: opacity 500ms;
   visibility: hidden;
   opacity: 0;
+  z-index: 11;
 }
 
 .overlay:target {
